--- a/test.html
+++ b/test.html
@@ -868,7 +868,7 @@ function numberFormat(inputNumber) {
                             <li>
                                 <h3 class='tit_art'><a onclick="ga('send', 'event', 'mainnews', 'click','2020/907118');" href='https://www.mk.co.kr/news/stock/view/2020/09/907118/' >방탄소년단으로 빌보드 정복한 '빅히트株'…10월이면 산다</a></h3>
                             </li>
-
+<li><div><img src="https://file.mk.co.kr/meet/2020/09/image_listtop_2020_907779_1599088217.jpg" alt="방시혁의 `통 큰 증여`…BTS멤버 1명당 92억" width="100%"></div></li>
 
 
                             <li>
