--- a/test2.html
+++ b/test2.html
@@ -776,74 +776,20 @@ function numberFormat(inputNumber) {
             <div class='mid_art'>
                 <!-- left -->
                 <div class='mid_art_left'>
-
-                <!-- 20201007 오늘의 운세 배너 추가 -->
-                <a href='https://www.mk.co.kr/news/society/view/2020/11/1124805/' onclick='ga("send", "event", "fortune", "click");' class='bn_newsletter' target='_blank'>
-                    <img src='https://img.mk.co.kr/main/2020/bn_fortune.jpg' alt='오늘의 운세'>
-                </a>
-<!-- 191211 오디오 서비스 -->
-<!--
-<h2 class="mt0"><a href="https://www.mk.co.kr/readingnews/" target="_blank" onclick="ga('send', 'event', 'audio', 'click');"><span>오디오 서비스</span></a></h2>
-<a href="https://www.mk.co.kr/readingnews/" class="bn_audio_service" target="_blank" onclick="ga('send', 'event', 'audio', 'click');">
-	<div class="audio_service_box">
-		<span class="today">오늘의 들려주는 뉴스</span>
-	</div>
-</a>
--->
-<!-- //191211 오디오 서비스 -->
-
-<a href="https://www.mk.co.kr/readingnews/" onclick="ga('send', 'event', 'audio', 'click');" class="bn_audio_service" target="_blank">
-    <!-- 200612_수정 : 이미지 링크 -->
-    <img src="https://img.mk.co.kr/main/2020/bn_audio_service.jpg" alt="오디오 서비스, 오늘의 들려주는 뉴스">
-    <!-- 200612_수정 -->
-</a>
-
-<!-- 200612_추가 : 각 컨텐츠 별 사이 여백을 class="bk_left3" 통일 -->
-<!-- 공백/라인 --><div class="bk_left3"></div>
-<!--// 200612_추가 -->
-
-<!-- 선거기간동안 쌩쌩매경 영역 추가 -->
-<h2 class='mt0'><a href='https://www.mk.co.kr/news/list/30000060/'><span>클릭 쌩쌩매경</span></a></h2>
-<ul class='thumb_vod_u'>
-	<li>
-		<a href='https://www.mk.co.kr/news/stock/view/2020/11/1120796/'  onclick="ga('send', 'event', 'ssmk', 'click', '2020/1120796');"  class='thumb_vod'><img src='//file.mk.co.kr/meet/2020/11/image_listtop_2020_1120796_1604276042.jpg' alt='큰손은 조정장서 대형주로 승부건다' width='180' height='101'><span class='ic_play'></span><span class='im_boder'></span></a>
-		<span class='thumb_vod_desc'><a href='https://www.mk.co.kr/news/stock/view/2020/11/1120796/'  onclick="ga('send', 'event', 'ssmk', 'click', '2020/1120796');" >큰손은 조정장서 <br>대형주로 승부건다</a></span>
-	</li>
-	<li>
-		<a href='https://www.mk.co.kr/news/business/view/2020/10/1101098/'  onclick="ga('send', 'event', 'ssmk', 'click', '2020/1101098');"  class='thumb_vod'><img src='//file.mk.co.kr/meet/2020/10/image_listtop_2020_1101098_1603774513.jpg' alt='신경영에서 초격차까지이건희 삼성회장의 `말`' width='180' height='101'><span class='ic_play'></span><span class='im_boder'></span></a>
-		<span class='thumb_vod_desc'><a href='https://www.mk.co.kr/news/business/view/2020/10/1101098/'  onclick="ga('send', 'event', 'ssmk', 'click', '2020/1101098');" >신경영에서 초격차까지<br>이건희 삼성회장의 `말`</a></span>
-	</li>
-</ul>
-<!-- 200612_추가 -->
-<!-- 공백/라인 --><div class="bk_left3"></div>
-<!--// 200612_추가 -->
-                <!-- 선거기간동안 쌩쌩매경 영역 추가 -->
-
-
-
-                <!-- 영상 리스트 -->
-<h2><span>M PLAY</span></h2>
-
-<!-- 영상 리스트 -->
-<ul class='thumb_vod_u'>
-	<li>
-		<a href='http://mplay.mk.co.kr/view/?cid=3666415' class='thumb_vod' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');"><img src='https://img.mbn.co.kr/filewww/mplay/2020/11/02/1/160430251791.jpg' alt='당신이 경험하지 못한 맛더 먹고 가(家)' width='180' height='101'><span class='ic_play'></span><span class='im_boder'></span></a>
-		<span class='thumb_vod_desc'><a href='http://mplay.mk.co.kr/view/?cid=3666415' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');">당신이 경험하지 못한 맛<br>더 먹고 가(家)</a></span>
-	</li>
-	<li>
-		<a href='http://mplay.mk.co.kr/view/?cid=3657773' class='thumb_vod' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');"><img src='https://img.mbn.co.kr/filewww/mplay/2020/10/30/2/160404200874.jpg' alt='어떤 곡이 어울리나요? 인생앨범 예스터데이♬' width='180' height='101'><span class='ic_play'></span><span class='im_boder'></span></a>
-		<span class='thumb_vod_desc'><a href='http://mplay.mk.co.kr/view/?cid=3657773' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');">어떤 곡이 어울리나요? <br>인생앨범 예스터데이♬</a></span>
-	</li>
-	<li>
-		<a href='https://www.youtube.com/watch?v=lYcJB1rMa3A' class='thumb_vod' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');"><img src='https://img.mbn.co.kr/filewww/mplay/2020/10/28/3/1603870914100.jpg' alt='' width='180' height='101'><span class='ic_play'></span><span class='im_boder'></span></a>
-		<span class='thumb_vod_desc'><a href='https://www.youtube.com/watch?v=lYcJB1rMa3A' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');"></a></span>
-	</li>
-	<li>
-		<a href='https://www.youtube.com/watch?v=KS5tHjtQndY' class='thumb_vod' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');"><img src='https://img.mbn.co.kr/filewww/mplay/2020/10/30/4/1604042864100.jpg' alt='소율 ˝문희준 아내도 좋지만 자아 찾고 싶어˝' width='180' height='101'><span class='ic_play'></span><span class='im_boder'></span></a>
-		<span class='thumb_vod_desc'><a href='https://www.youtube.com/watch?v=KS5tHjtQndY' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');">소율 ˝문희준 아내도 좋지만 <br>자아 찾고 싶어˝</a></span>
-	</li>
-</ul>
-                <!--// 영상 리스트 -->
+                  <!-- Begin Dable 좌측_텍스트 / For inquiries, visit http://dable.io -->
+                  <div id="dablewidget_M7NRKL7b" data-widget_id="M7NRKL7b">
+                  <script>
+                  (function(d,a,b,l,e,_) {
+                  if(d[b]&&d[b].q)return;d[b]=function(){(d[b].q=d[b].q||[]).push(arguments)};e=a.createElement(l);
+                  e.async=1;e.charset='utf-8';e.src='//static.dable.io/dist/plugin.min.js';
+                  _=a.getElementsByTagName(l)[0];_.parentNode.insertBefore(e,_);
+                  })(window,document,'dable','script');
+                  dable('setService', 'mk.co.kr');
+                  dable('sendLogOnce');
+                  dable('renderWidget', 'dablewidget_M7NRKL7b');
+                  </script>
+                  </div>
+                  <!-- End 좌측_텍스트 / For inquiries, visit http://dable.io -->
 
                 <!-- 공백 -->
                 <div class='bk_left3'></div>
