--- a/test2.html
+++ b/test2.html
@@ -790,7 +790,20 @@ function numberFormat(inputNumber) {
                   </script>
                   </div>
                   <!-- End 좌측_텍스트 / For inquiries, visit http://dable.io -->
-
+                  <!-- Begin Dable 좌측_텍스트_02 / For inquiries, visit http://dable.io -->
+                  <div id="dablewidget_YljkbKXO" data-widget_id="YljkbKXO">
+                  <script>
+                  (function(d,a,b,l,e,_) {
+                  if(d[b]&&d[b].q)return;d[b]=function(){(d[b].q=d[b].q||[]).push(arguments)};e=a.createElement(l);
+                  e.async=1;e.charset='utf-8';e.src='//static.dable.io/dist/plugin.min.js';
+                  _=a.getElementsByTagName(l)[0];_.parentNode.insertBefore(e,_);
+                  })(window,document,'dable','script');
+                  dable('setService', 'mk.co.kr');
+                  dable('sendLogOnce');
+                  dable('renderWidget', 'dablewidget_YljkbKXO');
+                  </script>
+                  </div>
+                  <!-- End 좌측_텍스트_02 / For inquiries, visit http://dable.io -->
                 <!-- 공백 -->
                 <div class='bk_left3'></div>
 
