--- a/test2.html
+++ b/test2.html
@@ -808,6 +808,17 @@ function numberFormat(inputNumber) {
                   <!-- End 좌측_텍스트_02 / For inquiries, visit http://dable.io -->
                 <!-- 공백 -->
                 <div class='bk_left3'></div>
+                <!--// 200612_추가 -->
+
+<!-- 선거기간동안 쌩쌩매경 영역 추가 -->
+<h2 class='mt0'><a href='https://www.mk.co.kr/news/list/30000060/'><span>클릭 쌩쌩매경</span></a></h2>
+<ul class='thumb_vod_u'>
+	<li>
+		<a href='https://www.mk.co.kr/news/stock/view/2020/11/1120796/'  onclick="ga('send', 'event', 'ssmk', 'click', '2020/1120796');"  class='thumb_vod'><img src='//file.mk.co.kr/meet/2020/11/image_listtop_2020_1120796_1604276042.jpg' alt='큰손은 조정장서 대형주로 승부건다' width='180' height='101'><span class='ic_play'></span><span class='im_boder'></span></a>
+		<span class='thumb_vod_desc'><a href='https://www.mk.co.kr/news/stock/view/2020/11/1120796/'  onclick="ga('send', 'event', 'ssmk', 'click', '2020/1120796');" >큰손은 조정장서 <br>대형주로 승부건다</a></span>
+	</li>
+</ul>
+<!-- 200612_추가 -->
 
                 <!-- MBN 종합뉴스 배너 -->
                 <a href='http://www.mbn.co.kr/pages/vod/programContents.php?progCode=552&menuCode=2636' class='bn_mbnnews' target='_blank'>
