--- a/test2.html
+++ b/test2.html
@@ -817,7 +817,22 @@ function numberFormat(inputNumber) {
 	</li>
 </ul>
 <!-- 200612_추가 -->
+<div class='bk_left3'></div>
+<!-- 영상 리스트 -->
+<h2><span>M PLAY</span></h2>
 
+<!-- 영상 리스트 -->
+<ul class='thumb_vod_u'>
+<li>
+<a href='http://mplay.mk.co.kr/view/?cid=3666415' class='thumb_vod' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');"><img src='https://img.mbn.co.kr/filewww/mplay/2020/11/02/1/160430251791.jpg' alt='당신이 경험하지 못한 맛더 먹고 가(家)' width='180' height='101'><span class='ic_play'></span><span class='im_boder'></span></a>
+<span class='thumb_vod_desc'><a href='http://mplay.mk.co.kr/view/?cid=3666415' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');">당신이 경험하지 못한 맛<br>더 먹고 가(家)</a></span>
+</li>
+<li>
+<a href='http://mplay.mk.co.kr/view/?cid=3657773' class='thumb_vod' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');"><img src='https://img.mbn.co.kr/filewww/mplay/2020/10/30/2/160404200874.jpg' alt='어떤 곡이 어울리나요? 인생앨범 예스터데이♬' width='180' height='101'><span class='ic_play'></span><span class='im_boder'></span></a>
+<span class='thumb_vod_desc'><a href='http://mplay.mk.co.kr/view/?cid=3657773' target='_new' onclick="ga('send', 'event', 'mbnnews', 'click', '');">어떤 곡이 어울리나요? <br>인생앨범 예스터데이♬</a></span>
+</li>
+</ul>
+<div class='bk_left3'></div>
                 <!-- MBN 종합뉴스 배너 -->
                 <a href='http://www.mbn.co.kr/pages/vod/programContents.php?progCode=552&menuCode=2636' class='bn_mbnnews' target='_blank'>
                     <img src='https://img.mk.co.kr/main/2020/bn_mbnnews.jpg' alt='MBN 종합뉴스'>
