--- a/test3.html
+++ b/test3.html
@@ -779,8 +779,8 @@ function numberFormat(inputNumber) {
                 <!-- left -->
                 <div class='mid_art_left'>
 
-                  <!-- Begin Dable 좌측_텍스트 / For inquiries, visit http://dable.io -->
-                  <div id="dablewidget_M7NRKL7b" data-widget_id="M7NRKL7b">
+                  <!-- Begin Dable 좌측_텍스트_정독2 / For inquiries, visit http://dable.io -->
+                  <div id="dablewidget_37Jb1g7N" data-widget_id="37Jb1g7N">
                   <script>
                   (function(d,a,b,l,e,_) {
                   if(d[b]&&d[b].q)return;d[b]=function(){(d[b].q=d[b].q||[]).push(arguments)};e=a.createElement(l);
@@ -789,10 +789,10 @@ function numberFormat(inputNumber) {
                   })(window,document,'dable','script');
                   dable('setService', 'mk.co.kr');
                   dable('sendLogOnce');
-                  dable('renderWidget', 'dablewidget_M7NRKL7b');
+                  dable('renderWidget', 'dablewidget_37Jb1g7N');
                   </script>
                   </div>
-                  <!-- End 좌측_텍스트 / For inquiries, visit http://dable.io -->
+                  <!-- End 좌측_텍스트_정독2 / For inquiries, visit http://dable.io -->
 
 <!-- 200612_추가 : 각 컨텐츠 별 사이 여백을 class="bk_left3" 통일 -->
 <!-- 공백/라인 --><div class="bk_left3"></div>
