--- a/test3.html
+++ b/test3.html
@@ -780,19 +780,13 @@ function numberFormat(inputNumber) {
                 <div class='mid_art_left'>
 
                   <!-- Begin Dable 좌측_텍스트_정독2 / For inquiries, visit http://dable.io -->
-                  <div id="dablewidget_37Jb1g7N" data-widget_id="37Jb1g7N">
-                  <script>
-                  (function(d,a,b,l,e,_) {
-                  if(d[b]&&d[b].q)return;d[b]=function(){(d[b].q=d[b].q||[]).push(arguments)};e=a.createElement(l);
-                  e.async=1;e.charset='utf-8';e.src='//static.dable.io/dist/plugin.min.js';
-                  _=a.getElementsByTagName(l)[0];_.parentNode.insertBefore(e,_);
-                  })(window,document,'dable','script');
-                  dable('setService', 'mk.co.kr');
-                  dable('sendLogOnce');
-                  dable('renderWidget', 'dablewidget_37Jb1g7N');
-                  </script>
-                  </div>
-                  <!-- End 좌측_텍스트_정독2 / For inquiries, visit http://dable.io -->
+<div id="dablewidget_37Jb1g7N" data-widget_id="37Jb1g7N">
+<script>
+(function(d,a){d[a]=d[a]||function(){(d[a].q=d[a].q||[]).push(arguments)};}(window,'dable'));
+dable('renderWidget', 'dablewidget_37Jb1g7N');
+</script>
+</div>
+<!-- End 좌측_텍스트_정독2 / For inquiries, visit http://dable.io -->
 
 <!-- 200612_추가 : 각 컨텐츠 별 사이 여백을 class="bk_left3" 통일 -->
 <!-- 공백/라인 --><div class="bk_left3"></div>
