--- a/test3.html
+++ b/test3.html
@@ -780,11 +780,13 @@ function numberFormat(inputNumber) {
                 <div class='mid_art_left'>
 
                   <!-- Begin Dable 좌측_텍스트_정독2 / For inquiries, visit http://dable.io -->
+<div max-height:450px>
 <div id="dablewidget_37Jb1g7N" data-widget_id="37Jb1g7N">
 <script>
 (function(d,a){d[a]=d[a]||function(){(d[a].q=d[a].q||[]).push(arguments)};}(window,'dable'));
 dable('renderWidget', 'dablewidget_37Jb1g7N');
 </script>
+</div>
 </div>
 <!-- End 좌측_텍스트_정독2 / For inquiries, visit http://dable.io -->
 
