--- a/test.html
+++ b/test.html
@@ -677,7 +677,7 @@
 		<td style='word-break:break-all'>
 			<div id='adad'></div>
 			<div id='Conts' class='read1'><html>
- <head><META content="text/html; charset=EUC-KR" http-equiv="Content-Type"/></head>
+ <head><META content="text/html; charset=EUC-KR" http-equiv="Content-Type"/><LINK type="text/css" href="http://kind.krx.co.kr/css/koscom_web.css" rel="stylesheet"/></head>
  <body>
   <div class="xforms">
    <div>
