--- a/test4.html
+++ b/test4.html
@@ -15,14 +15,14 @@
 <meta property='og:site_name' content='mk.co.kr'/>
 <meta property='og:description' content='(주)코센 전환가액의조정(제14회차)'/>
 <link rel="canonical" href="http://vip.mk.co.kr/news/view/21/28/855046.html"/>    <title>(주)코센 전환가액의조정(제14회차)</title>
-    <link rel='stylesheet' type='text/css' href='/css/mweb_v2.css'/>
-    <link rel='apple-touch-icon' href='/images/icon_114.png'/>
+    <link rel='stylesheet' type='text/css' href='http://m.mk.co.kr/css/mweb_v2.css'/>
+    <link rel='apple-touch-icon' href='http://m.mk.co.kr/images/icon_114.png'/>
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <script type="text/javascript" src='/include/js/swipe.js'></script>
-    <script type="text/javascript" src='/include/js/common.js'></script>
-    <script type="text/javascript" src='/include/js/common_news.js'></script>
-    <script type="text/javascript" src='/include/js/cookie_handler.js'></script>
-    <script type="text/javascript" src='/include/js/common_ad.js'></script>
+    <script type="text/javascript" src='http://m.mk.co.kr/include/js/swipe.js'></script>
+    <script type="text/javascript" src='http://m.mk.co.kr/include/js/common.js'></script>
+    <script type="text/javascript" src='http://m.mk.co.kr/include/js/common_news.js'></script>
+    <script type="text/javascript" src='http://m.mk.co.kr/include/js/cookie_handler.js'></script>
+    <script type="text/javascript" src='http://m.mk.co.kr/include/js/common_ad.js'></script>
     <!--구글 analytics 코드-->
     <script type="text/javascript">
         var _gaq = _gaq || [];
