--- a/test4.html
+++ b/test4.html
@@ -166,7 +166,7 @@
         overflow: hidden
     }
 </style>
-<link rel='stylesheet' type='text/css' href='/css/menu.css'/><!--160512 전체메뉴 css 추가-->
+<link rel='stylesheet' type='text/css' href='http://m.mk.co.kr/css/menu.css'/><!--160512 전체메뉴 css 추가-->
 <script type="text/javascript" src="/include/js/jquery.mklogin.js?v=20171117"></script>
 <script>
     var toggleAllMenu = function () {
