--- a/test3.html
+++ b/test3.html
@@ -9,7 +9,7 @@
 <title>MK포토 ::: No1. 경제포털 매일경제</title>
 <meta NAME='description' CONTENT='No1. 경제포털 매일경제에서 제공하는 시사.국제.문화.연예.스포츠 포토뉴스입니다.'>
 <meta NAME='keywords' CONTENT='매경인터넷,매경인터넷(주),매경,매일경제,매일경제신문,매일경제신문사,MK,MKnetwork,MKnews,MKstock,MKbiz,MKland,MKscout,MKlife,매경이코노미, MKeconomy,Citylife,MKmall,MKbook,MKauction,MBN,MKstocktv,moneyplus,머니플러스,매경월드아카데미,매경eacademy,e-academy,키?-academy,매경hellojob,스톡캐스터,stockcaster, MKstockcaster,Globalnewsbank,Business,Finance'>
-<link rel='stylesheet' type='text/css' href='./css/mk_photo_2014.css'/>
+<link rel='stylesheet' type='text/css' href='http://photos.mk.co.kr/new/css/mk_photo_2014.css'/>
 <link rel='stylesheet' type='text/css' href='http://common.mk.co.kr/common/css/bt_footer.css'/>
 <script type='text/javascript' src='http://common.mk.co.kr/common/js/openwindow.js'></script>
 <script type='text/javascript' src='http://money.mk.co.kr/common/include/search/search.js'></script>
