--- a/test1.html
+++ b/test1.html
@@ -775,7 +775,7 @@ $().ready(function() {
 		<!--  left contets -->
 		<div class='left_content'>
 			<div id='article_body' itemprop='articleBody'>
-				<div class='art_txt'><a href="https://premium.mk.co.kr" rel="noopener" onclick="gtag('event', 'click', {'event_category': 'studiom_test', 'event_label': 'articel'});">test</a>
+				<div class='art_txt'><a href="https://premium.mk.co.kr" target="_blank" rel="noopener" onclick="gtag('event', 'click', {'event_category': 'studiom_test', 'event_label': 'articel'});">test</a>
 <br><br>[ⓒ 매일경제 & mk.co.kr, 무단전재 및 재배포 금지]
 <br><br>
 
