--- a/test1.html
+++ b/test1.html
@@ -131,13 +131,7 @@ try {
     </script>
 
     <!-- 20181119 통합 트래픽 GA코드 추가  -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-24472307-90"></script>
-
-<!-- Promise IE 지원 -->
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
-<!-- Promise IE 지원 -->
-<script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-24472307-90">
 		window.dataLayer = window.dataLayer || [];
 			  function gtag(){dataLayer.push(arguments);}
 			  gtag('js', new Date());
