--- a/1.html
+++ b/1.html
@@ -1,26 +1,6 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>차트테스트</title>
-        <meta charset="utf-8">
-        <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <style>
-      #container{
-        position: relative;
-      }
-
-      #piechart{width: 900px; height: 500px;}
-
-      #overlay {
-        position: absolute;
-        width: 80px;
-        height: 80px;
-        top: 110px;
-        left: 110px;
-        border-radius: 40px;
-      }
-    </style>
-
+  <head>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawChart);
@@ -28,43 +8,24 @@
       function drawChart() {
 
         var data = google.visualization.arrayToDataTable([
-          ['Task', 'Hours per Day'],
-          ['Work',     11],
-          ['Eat',      2],
-          ['Commute',  2],
-          ['Watch TV', 2],
-          ['Sleep',    7]
+          ['Effort', 'Amount given'],
+          ['My all',     73.1],
         ]);
 
         var options = {
-          pieHole: 0.41,  // 도넛차트
-          chartArea: {
-            /* 차트크기 */
-            width: 200,
-            height: 200
+          pieHole: 0.5,
+          pieSliceTextStyle: {
+            color: 'black',
           },
-          /* 전체크기 */
-          width: 300,
-          height: 300,
-
-          /* 차트에 레이블 표시 (percentage, value or label)*/
-          pieSliceText: 'label',
-
-          /* 꼬리표 제거 */
           legend: 'none'
         };
 
-        var chart = new google.visualization.PieChart(document.getElementById('piechart'));
-
+        var chart = new google.visualization.PieChart(document.getElementById('donut_single'));
         chart.draw(data, options);
       }
     </script>
-
-    </head>
-    <body>
-      <div id="container">
-        <div id="piechart"></div>
-        <img id="overlay" src="https://ddragon.leagueoflegends.com/cdn/11.4.1/img/champion/Shen.png">
-      </div>
-    </body>
+  </head>
+  <body>
+    <div id="donut_single" style="width: 900px; height: 500px;"></div>
+  </body>
 </html>
