--- a/1.html
+++ b/1.html
@@ -31,9 +31,8 @@
 <link rel="stylesheet" href="https://file.mk.co.kr/include/js/swiper-4.5.1.min.css">
 <script src="https://file.mk.co.kr/include/js/swiper-4.5.1.min.js"></script><link rel="stylesheet" type="text/css" href="//common.mk.co.kr/common/css/2021/m/common.css?dummy=1650609002" />
 <link rel="stylesheet" type="text/css" href="//common.mk.co.kr/common/css/2021/m/main.css?dummy=1650609002" />
-<link rel='stylesheet' type='text/css' href='https://anselmo0418.github.io/moonlight0418/elect8.css'>
-<!-- <link rel='stylesheet' type='text/css' href='/css/elect8.css'> -->
-
+<link rel='stylesheet' type='text/css' href='//common.mk.co.kr/common/css/2022/m/elect8.css'>
+<!-- <link rel='stylesheet' type='text/css' href='css/elect8.css'> -->
 
 <meta name="naver-site-verification" content="e660e388f4bb09b626ecf42e4785420b7f477f24" />
 <script type="application/ld+json">
@@ -220,15 +219,13 @@
     <!-- 2022 전국동시지방선거 -->
     <link rel='stylesheet' type='text/css' href=''>
     <style>
-        /* #election_612  .toptitle612 {background:url(//img.mk.co.kr/2022/61elect_dday/m/bg_topimg2.jpg) no-repeat  0 0; background-size: 100% 100%; text-align:center;
-    height: 55px; position:relative;} */
     </style>
 
 <div id="election_612">
     <!-- 상단타이틀 -->
-    <div class="toptitle612">
-        <a href="#"><img src="//img.mk.co.kr/2022/61elect_dday/m/m_bt_elect_art.png" style="width: 100%" class="bt_eletart"  alt="선거기사"/></a>
-        <img src="//img.mk.co.kr/2022/61elect_dday/m/m_t_toptitle2.png" style="width: 100%;" alt="제8회전국동시지방선거" class="img_title61"/>
+    <div class="toptitle61">
+        <a href="#"><img src="//img.mk.co.kr/2022/61elect_dday/m/m_bt_elect_art.png" width="100%" class="bt_eletart"  alt="선거기사"/></a>
+        <img src="//img.mk.co.kr/2022/61elect_dday/m/m_t_toptitle.png" width="100%" alt="제8회전국동시지방선거" class="img_title61"/>
     </div>
     <!--// 상단타이틀 -->
 
@@ -236,6 +233,7 @@
         <span class="sm_font_t"><em class="sm_font_tb">16:05 기준</em> 중앙선관위 제공</span>
         <span class="sm_font_p"><em class="sm_font_pb">전국 투표율</em> 73.8%</span>
     </div>
+
 
     <div class="contents612">
         <div class="in612">
@@ -248,77 +246,100 @@
                 </ul>
             </div>
         </div>
-        <div class="vote_cont">
-            <div class="vote_box">
-                <a href="#">
-                    <img src="http://img.mk.co.kr/main/2016/btn_prev.gif" border="0" class="btn_left_nav" style="top:110px" alt="이전">
-                </a>
-	 	        <a href="#">
-                     <img src="http://img.mk.co.kr/main/2016/btn_next.gif" border="0" class="btn_right_nav" style=" top:110px" alt="다음">
-                </a>
+        <div class="main_cts">
+            <div class="top_cont">
+                <ul class="menu_li">
+                    <li class="on"><a href="#">서울</a></li>
+                    <li><a href="#">부산</a></li>
+                    <li><a href="#">대구</a></li>
+                    <li><a href="#">인천</a></li>
+                    <li><a href="#">광주</a></li>
+                    <li><a href="#">대전</a></li>
+                    <li><a href="#">울산</a></li>
+                    <li><a href="#">세종</a></li>
+                    <li><a href="#">경기</a></li>
+                    <li><a href="#">충북</a></li>
+                    <li><a href="#">충남</a></li>
+                    <li><a href="#">전북</a></li>
+                    <li><a href="#">전남</a></li>
+                    <li><a href="#">경북</a></li>
+                    <li><a href="#">경남</a></li>
+                    <li><a href="#">제주</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="battles">
 
-                <dl class="battle_base">
-                <dd>
-                    <div class="t_battle">
-                        <div class="bt_box">
-                            <ul class="result_people">
-                                <li class="peo0">
-                            <!-- 서울 결과1 -->
-                                    <div class="c_location"><span>전라북도 완주군 진안군 무주군 장수군</span></div>
-                                            <ul class="result_1">
-                                                <li>
-                                                    <div class="pic_pred pt95"><img alt="후보자 사진" src="https://img.mk.co.kr/main/2022/61elect/jis.jpg"></div>
-                                                </li>
-                                                <li>
-                                                    <span class="dn dangname1">신한반도평화체제당</span> <br><span class="ft20">김김매일</span>
-                                                </li>
-                                            </ul>
-                                            <div class="dang_circle">
-                                                <strong>65.30</strong>
-                                                <span class="f12">%</span>
-                                                <span class="g_gap">|</span>
-                                                <span class="f13">1,453,974표</span>
-                                            </div>
-
-                    <!--// 서울 결과1 -->
-                                </li>
-
-                                <li class="peo1">
-                            <!-- 부산 결과1 -->
-                                    <div class="c_location"><span>부산</span></div>
-                                            <ul class="result_1">
-                                                <li>
-                                                    <div class="pic_pred pt95"><img alt="후보자 사진" src="https://img.mk.co.kr/main/2022/61elect/jis.jpg"></div>
-                                                </li>
-                                                <li>
-                                                    <span class="dn dangname2">국민의힘</span> <br><span class="ft20">김매일</span>
-                                                </li>
-                                            </ul>
-                                            <div class="dang_circle">
-                                                <strong>65.30</strong>
-                                                <span class="f12">%</span>
-                                                <span class="g_gap">|</span>
-                                                <span class="f13">1,453,974표</span>
-                                            </div>
-                            <!-- 부산결과 -->
-                                </li>
-                            </ul>
+            <img src="https://img.mk.co.kr/main/2022/61elect/ic_winner_01.png";  class="win_icons1" alt="당선유력"/>
+            <div class="bt_box">
+                <dl class="member1">
+                    <dd class="mem1">
+                        <div class="pic_pred pt95">
+                            <img alt="후보자사진" src="https://img.mk.co.kr/raythep/2021/im_cd_theminjoo.jpg">
                         </div>
-                    </div>
-                </dd>
+                        <div class="name95">
+                            <span class="p_01">국민의힘</span>
+                            <br>
+                            <span class="ft_black20">신매경</span>
+                        </div>
+                    </dd>
+                    <dd class="mem_c">
+
+                        <div class="c_price1">
+                            <span class="ft14">개표</span><br>
+                            18.71
+                            <span class="ft13">%</span>
+                        </div>
+                        <div class="ft13_1">
+                            <strong>득표차</strong>
+                            <br>
+                            <strong>10.05%p</strong>
+                            <br>
+                            130,000표
+                        </div>
+                    </dd>
+                    <dd class="mem2">
+                        <div class="pic_pred pt95">
+                            <img alt="후보자사진" src="https://img.mk.co.kr/raythep/2021/im_cd_theminjoo.jpg">
+                        </div>
+                        <div class="name95">
+                            <span class="p_02">더불어민주당</span>
+                            <br>
+                            <span class="ft_black20">신매경</span>
+                        </div>
+                    </dd>
                 </dl>
+                <div class="percent">
+                    <div class="vote_left">
+                        <div class="vote_bar dang01">
+                            <span class="vote_per">
+                                <strong>80.00</strong>
+                                <em>%</em>
+                            </span>
+                        </div>
+                        <span class="f01">453,123표</span>
+                    </div>
+                    <div class="vote_right">
+                        <div class="vote_bar dang02">
+                            <span class="vote_per">
+                                <strong>80.00</strong>
+                                <em>%</em>
+                            </span>
+                        </div>
+                        <span class="f02">453,123표</span>
+                    </div>
+                </div>
             </div>
         </div>
 
-
         <a href="#">
             <div class="vote">
-                <span>지역별 투표율 접기 <img src="//img.mk.co.kr/2022/61elect_dday/m/expand.png"></span>
+                <span>지역별 투표율 접기 <img src="//img.mk.co.kr/2022/61elect_dday/m/fold.png"></span>
             </div>
         </a>
 
-        <!-- 접는부분 -->
-        <div class="bx">
+        <!-- 접는 부분 -->
+        <!-- <div class="bx">
             <div class="bxbx">
                 <h4>전국 시도지사<br>개표 현황</h4>
                 <div class="scroll_bx">
@@ -384,8 +405,9 @@
                     </dl>
                 </div>
             </div>
-        </div>
-        <!-- 접는부분 -->
+        </div> -->
+        <!-- 접는 부분 -->
+
     <!--// 전국시도지사개표현황 -->
 
 
