--- a/1.html
+++ b/1.html
@@ -275,7 +275,7 @@
                 <dl class="member1">
                     <dd class="mem1">
                         <div class="pic_pred pt95">
-                            <img alt="후보자사진" src="https://img.mk.co.kr/raythep/2021/im_cd_theminjoo.jpg">
+                            <img alt="후보자사진" src="https://news.mk.co.kr/elect/20220601/resource/image/100148724.png">
                         </div>
                         <div class="name95">
                             <span class="p_01">국민의힘</span>
@@ -300,7 +300,7 @@
                     </dd>
                     <dd class="mem2">
                         <div class="pic_pred pt95">
-                            <img alt="후보자사진" src="https://img.mk.co.kr/raythep/2021/im_cd_theminjoo.jpg">
+                            <img alt="후보자사진" src="https://news.mk.co.kr/elect/20220601/resource/image/100148724.png">
                         </div>
                         <div class="name95">
                             <span class="p_02">더불어민주당</span>
